# models/playbook_executions_response.go
@@ -1,0 +1,110 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// PlaybookExecutionsResponse playbook executions response
+//
+// swagger:model playbook-executions-response
+type PlaybookExecutionsResponse []*PlaybookExecutionsResponseItems0
+
+// Validate validates this playbook executions response
+func (m PlaybookExecutionsResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	for i := 0; i < len(m); i++ {
+		if swag.IsZero(m[i]) { // not required
+			continue
+		}
+
+		if m[i] != nil {
+			if err := m[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName(strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName(strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validate this playbook executions response based on the context it is used
+func (m PlaybookExecutionsResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	for i := 0; i < len(m); i++ {
+
+		if m[i] != nil {
+			if err := m[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName(strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName(strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// PlaybookExecutionsResponseItems0 playbook executions response items0
+//
+// swagger:model PlaybookExecutionsResponseItems0
+type PlaybookExecutionsResponseItems0 struct {
+
+	// Returns the ansible playbook as a string.
+	AnsiblePlaybook string `json:"ansible-playbook,omitempty"`
+}
+
+// Validate validates this playbook executions response items0
+func (m *PlaybookExecutionsResponseItems0) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this playbook executions response items0 based on context it is used
+func (m *PlaybookExecutionsResponseItems0) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PlaybookExecutionsResponseItems0) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PlaybookExecutionsResponseItems0) UnmarshalBinary(b []byte) error {
+	var res PlaybookExecutionsResponseItems0
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
